# picotherm

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml
src/: main.rs  relays.rs  sevensegment.rs  temp.rs
